# wat-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  transform_let.py
.claude/: settings.json
crates/wat-cli/: Cargo.toml
crates/wat-cli/src/: lib.rs  main.rs
crates/wat-cli/tests/: wat_arc100_public_api.rs  wat_cli.rs  wat_test_cli.rs
crates/wat-edn/: Cargo.toml  README.md
crates/wat-edn/docs/: IPC-BRIDGE.md  USER-GUIDE.md
crates/wat-edn/examples/: bench.rs
crates/wat-edn/interop-tests/: .gitignore  Cargo.toml  README.md
crates/wat-edn/interop-tests/clj/: consume.clj  json_passthrough.clj  produce.clj  produce_typed.clj
crates/wat-edn/interop-tests/src/: main.rs
crates/wat-edn/src/: error.rs  escapes.rs  json.rs  lexer.rs  lib.rs  parser.rs  value.rs  writer.rs
crates/wat-edn/tests/: accessors.rs  comprehensive.rs  display_equivalence.rs  pretty.rs  round_trip.rs  spec_conformance.rs  spec_strict.rs  uuid_v4_mint.rs  wire_encoding.rs
crates/wat-edn/wat-edn-clj/: .gitignore  README.md  deps.edn
crates/wat-edn/wat-edn-clj/examples/: dashboard.clj
crates/wat-edn/wat-edn-clj/src/wat_edn/: core.clj  json.clj  scanner.clj
crates/wat-edn/wat-edn-clj/test/wat_edn/: core_test.clj  json_test.clj  scanner_test.clj
crates/wat-edn/wat-edn-clj/wat/: shared.wat
crates/wat-hologram-lru/: Cargo.toml
crates/wat-hologram-lru/src/: lib.rs
crates/wat-hologram-lru/tests/: test.rs
crates/wat-hologram-lru/wat-tests/holon/: HologramLRU.wat
crates/wat-hologram-lru/wat/holon/: HologramLRU.wat
crates/wat-lru/: Cargo.toml
crates/wat-lru/src/: lib.rs  shim.rs
crates/wat-lru/tests/: test.rs  wat_lru_tests.rs  wat_suite.rs
crates/wat-lru/wat/: lru.wat  service.wat
crates/wat-lru/wat-tests/: CacheService.wat  LocalCache.wat
crates/wat-lru/wat-tests/lru/: CacheService.wat  HolonKey.wat  LocalCache.wat
crates/wat-lru/wat/lru/: CacheService.wat  LocalCache.wat
crates/wat-measure/: Cargo.toml
crates/wat-measure/src/: lib.rs  shim.rs  workunit.rs
crates/wat-measure/tests/: test.rs
crates/wat-measure/wat-tests/measure/: WorkUnit.wat  uuid.wat
crates/wat-measure/wat/measure/: Event.wat  WorkUnit.wat  types.wat  uuid.wat
crates/wat-sqlite/: Cargo.toml
crates/wat-sqlite/src/: auto.rs  lib.rs  read_handle.rs
crates/wat-sqlite/tests/: test.rs
crates/wat-sqlite/wat-tests/: arc-122-attributes.wat  arc-123-time-limit.wat
crates/wat-sqlite/wat-tests/sqlite/: Db.wat  scaffold.wat
crates/wat-sqlite/wat-tests/std/telemetry/: Sqlite.wat  auto-spawn.wat  edn-newtypes.wat
crates/wat-sqlite/wat/sqlite/: Db.wat  ReadHandle.wat
crates/wat-sqlite/wat/std/telemetry/: Sqlite.wat
crates/wat-telemetry/: Cargo.toml
crates/wat-telemetry-sqlite/: Cargo.toml
crates/wat-telemetry-sqlite/src/: auto.rs  cursor.rs  lib.rs
crates/wat-telemetry-sqlite/tests/: test.rs
crates/wat-telemetry-sqlite/wat-tests/telemetry/: Sqlite.wat  auto-spawn.wat  edn-newtypes.wat  hashmap-field.wat  reader.wat
crates/wat-telemetry-sqlite/wat/telemetry/: Reader.wat  Sqlite.wat
crates/wat-telemetry/src/: lib.rs  shim.rs  workunit.rs
crates/wat-telemetry/tests/: test.rs
crates/wat-telemetry/wat-tests/telemetry/: Console.wat  Service.wat  WorkUnit.wat  WorkUnitLog.wat  uuid.wat
crates/wat-telemetry/wat/telemetry/: Console.wat  ConsoleLogger.wat  Event.wat  Service.wat  WorkUnit.wat  WorkUnitLog.wat  types.wat  uuid.wat
docs/: CIRCUIT.md  CLOJURE-ROSETTA.md  COMPACTION-AMNESIA-RECOVERY.md  CONVENTIONS.md  INTENTIONS.md  ITERATION-PATTERNS.md  MODULARIZATION-NOTES.md  README.md  SERVICE-PROGRAMS.md  SUBSTRATE-AS-TEACHER.md  USER-GUIDE.md  WAT-CHEATSHEET.md  ZERO-MUTEX.md  caching-design-2026-04-19.md  colon-quote-sweep.md  macro-arc-progress.md  wat-dispatch-macro-design-2026-04-19.md
examples/console-demo/: Cargo.toml
examples/console-demo/src/: main.rs
examples/console-demo/wat/: main.wat
examples/interrogate/: Cargo.toml
examples/interrogate/src/: main.rs
examples/interrogate/wat/: main.wat
examples/with-loader/: Cargo.toml
examples/with-loader/src/: main.rs
examples/with-loader/tests/: smoke.rs  test.rs  wat_suite.rs
examples/with-loader/wat/: deeper.wat  helper.wat  main.wat
examples/with-loader/wat-tests/: helpers.wat  test-loader.wat  test_loader.wat
examples/with-lru/: Cargo.toml
examples/with-lru/src/: main.rs  program.wat
examples/with-lru/tests/: smoke.rs
examples/with-lru/wat/: main.wat
scripts/: arc_037_slice_5_sweep.py  cargo-test-failures.sh  cargo-test-summary.sh  query-db.sh  stability-100.sh  sum-results.sh  sweep-diagnostics.sh
src/: assertion.rs  ast.rs  check.rs  closure_extract.rs  compose.rs  config.rs  diagnostic.rs  dim_router.rs  dispatch.rs  edn_shim.rs  fork.rs  form_match.rs  freeze.rs  harness.rs  hash.rs  hologram.rs  holon_hash.rs  identifier.rs  io.rs  lexer.rs  lib.rs  load.rs  lower.rs  macros.rs  multimethod.rs  panic_hook.rs  parser.rs  process_stdio.rs  resolve.rs  restriction_entry.rs  runtime.rs  sandbox.rs  sigma.rs  source.rs  span.rs  spawn.rs  spawn_process.rs  special_forms.rs  stdlib.rs  string_ops.rs  (+6 more)
tests/: arc112_scheme_probe.rs  arc112_slice2b_process_send_recv.rs  mvp_end_to_end.rs  probe_bootstrap_wat_vm_process.rs  probe_channel_primitive.rs  probe_closure_body_prelude_lift.rs  probe_comms_foundation.rs  probe_comms_process.rs  probe_comms_thread.rs  probe_counter_actor_process_diag.rs  probe_declaration_form_lift.rs  probe_def_not_special.rs  probe_deftest_hermetic_isolation.rs  probe_do_splice_def.rs  probe_do_splice_define.rs  probe_do_splice_enum.rs  probe_do_splice_struct.rs  probe_let_splice_def.rs  probe_let_splice_define.rs  probe_let_splice_enum.rs  probe_let_splice_struct.rs  probe_lifeline_orphan_clean_via_fork_program.rs  probe_lifeline_orphan_clean_via_substrate.rs  probe_lifeline_pipe_proof.rs  probe_no_default_rust_panic_noise_on_stderr.rs  probe_panic_hook_auto_installed.rs  probe_pdeathsig_diagnostic.rs  probe_pdeathsig_kills_orphan_child.rs  probe_pidfd_primitive.rs  probe_register_types_splice_aware.rs  (+132 more)
wat-macros/: Cargo.toml
wat-macros/src/: codegen.rs  lib.rs
(+1368 files in other folders)
