[workspace]
members = [".", "wat-macros", "crates/wat-lru", "examples/with-lru", "examples/with-loader"]

[package]
name = "wat"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The wat language — parser, type checker, macro expander, and runtime for the 058 algebra surface."
repository = "https://github.com/watmin/wat-rs"

[dependencies]
holon = { path = "../holon-rs" }
sha2 = "0.10"
ed25519-dalek = "2"
base64 = "0.22"
crossbeam-channel = "0.5"
libc = "0.2"
regex = "1"
chrono = "0.4"
wat-macros = { path = "wat-macros" }

[dev-dependencies]
