[workspace]
members = [
    ".",
    "crates/wat-macros",
    "crates/wat-lru",
    "crates/wat-edn",
    "crates/wat-holon-lru",
    "crates/wat-sqlite",
    "crates/wat-telemetry",
    "crates/wat-telemetry-sqlite",
    "examples/with-lru",
    "examples/with-loader",
    "examples/console-demo",
]
# default-members makes `cargo test` / `cargo build` / `cargo check` cover
# every workspace member, not just the root package. Without this an
# upstream surface change (e.g. arc 047 making `:wat::core::first` return
# `Option<T>` for Vec args) can rot a downstream crate's tests
# (crates/wat-lru/wat-tests/) and stay invisible until someone
# explicitly runs `--workspace`. Pinning here keeps every crate honest
# at every checkpoint.
default-members = [
    ".",
    "crates/wat-macros",
    "crates/wat-lru",
    "crates/wat-edn",
    "crates/wat-holon-lru",
    "crates/wat-sqlite",
    "crates/wat-telemetry",
    "crates/wat-telemetry-sqlite",
    "examples/with-lru",
    "examples/with-loader",
    "examples/console-demo",
]

[package]
name = "wat"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The wat language — parser, type checker, macro expander, and runtime for the 058 algebra surface."
repository = "https://github.com/watmin/wat-rs"

[dependencies]
holon = { path = "../holon-rs" }
sha2 = "0.10"
ed25519-dalek = "2"
base64 = "0.22"
crossbeam-channel = "0.5"
libc = "0.2"
regex = "1"
chrono = "0.4"
wat-macros = { path = "crates/wat-macros" }
wat-edn = { path = "crates/wat-edn" }

[dev-dependencies]
