[package]
name = "wat-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The wat command-line runner. Library + binary: `wat_cli::run` is the public API for building your own batteries-included wat CLI; `[[bin]] wat` is the canonical batteries-included reference. Arc 099 + arc 100."
repository = "https://github.com/watmin/wat-rs"

[lib]
name = "wat_cli"
path = "src/lib.rs"

[[bin]]
name = "wat"
path = "src/bin/wat.rs"

[dependencies]
wat = { path = "../.." }
wat-lru = { path = "../wat-lru" }
wat-holon-lru = { path = "../wat-holon-lru" }
wat-sqlite = { path = "../wat-sqlite" }
wat-telemetry = { path = "../wat-telemetry" }
wat-telemetry-sqlite = { path = "../wat-telemetry-sqlite" }
libc = "0.2"
