[package]
name = "wat-hologram-lru"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bounded coordinate-cell cache for wat — pure-wat composition of :wat::holon::Hologram (substrate) + :wat::lru::LocalCache (wat-lru) under :wat::holon::HologramLRU."

[dependencies]
wat     = { path = "../.." }
wat-lru = { path = "../wat-lru" }
