[package]
name = "wat-measure"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Measurement primitives for wat — :wat::measure::uuid::v4 (slice 2). Future slices add WorkUnit + WorkUnitLog. Arc 091."

[dependencies]
wat = { path = "../.." }
wat-macros = { path = "../wat-macros" }
wat-edn = { path = "../wat-edn", features = ["mint"] }
