[package]
name = "wat-sqlite"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Sqlite-backed telemetry destination for wat — `:wat::sqlite::Db` (low-level Rust shim over rusqlite, thread-owned via ThreadOwnedCell) + `:wat::std::telemetry::Sqlite/spawn` (companion to wat/std/telemetry/Console under the arc 080 service contract)."

[dependencies]
wat = { path = "../.." }
rusqlite = { version = "0.31", features = ["bundled"] }
