[package]
name = "wat-sqlite"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "General-purpose sqlite primitives for wat — `:wat::sqlite::Db` (low-level Rust shim over rusqlite, thread-owned via ThreadOwnedCell). For Service<E,G>-fronted sqlite sinks (enum-derived schema, batch-as-protocol, ack lockstep) see the sibling `wat-telemetry-sqlite` crate. Arc 083 (initial) + arc 096 (scope narrowed)."

[dependencies]
wat = { path = "../.." }
wat-macros = { path = "../wat-macros" }
rusqlite = { version = "0.31", features = ["bundled"] }
