[package]
name = "console-demo"
version = "0.1.0"
edition = "2021"
publish = false
description = "Walkable demo of the ambient-stdio API. Renders a tiny domain enum five ways (EDN / NoTagEdn / Json / NoTagJson / Pretty) and emits via :wat::kernel::println + eprintln. Arc 170 slice 1f-η — Console driver retired."

[[bin]]
name = "console-demo"
path = "src/main.rs"

[dependencies]
wat = { path = "../.." }
